[tool.poetry]
name = "sentiment-analysis"
version = "0.1.0"
description = ""
authors = ["Belkis Baccar <belkisbaccar29@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pandas = "^2.2.1"
numpy = "^1.26.4"
matplotlib = "^3.8.3"
seaborn = "^0.13.2"
nltk = "^3.8.1"
svgling = "^0.4.0"
transformers = "^4.38.2"
scipy = "^1.12.0"
torch = "^2.2.1"
ipywidgets = "^8.1.2"
jupyter = "^1.0.0"
scikit-learn = "^1.4.1.post1"
wordcloud = "^1.9.3"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
